tests/js/invalid/if/some-conditional.buri
result = if #some(1) do "hello"